GNOME Bugzilla – Bug 660986
memory leak in CoglPipeline::layers_cache
Last modified: 2011-10-12 14:31:09 UTC
Created attachment 198337 [details] [review] fix memory leak CoglPipeline::layers_cache In Cogl 1.8.0, there is memory leak in cogl-pipeline.c. CoglPipeline::layers_cache is allocated but not freed in _cogl_pipeline_free(). I couldn't assure that the attached patch is right, but it works for me.
thanks for catching this, I've pushed a patch to master and cherry-picked it onto the 1.8 branch too.